# copilot-chat

./: Cargo.toml  README.md
src/: main.rs
src/chat/: chat.rs  core.rs  errors.rs  mod.rs  prompts.rs  stream.rs
src/cli/: commands.rs  handlers.rs  subcommands.rs
src/client/: auth.rs  client.rs  connector.rs  mod.rs  provider.rs
src/tools/: cli.rs  diff.rs  files.rs  mod.rs  reader.rs
