[package]
name = "copilot-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.20", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
